@@ -1,5 +1,11 @@
 2008-10-04  kitone  <kitone@gna.org>
 
+	* src/ScriptInfo.cc:
+	* src/ScriptInfo.h:
+	Remove values for std::map<Glib::ustring, Glib::ustring>.
+
+2008-10-04  kitone  <kitone@gna.org>
+
 	* src/actions/Transcript.cc:
 	Restore Import/Export with the support of FileReader/Writer.
 
